<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OpisNaPotrebnaUsluga"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/etOpisNaUsluga"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/opisKratok"
        android:lines="5"
        android:minLines="1"
        android:inputType="textEmailAddress|textMultiLine"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MoznostZaPlakjanje"
        android:textStyle="bold"
        android:textSize="20sp"/>


    <CheckBox
        android:id="@+id/checkBoxCena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        />

    <EditText
        android:id="@+id/etCena"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:hint="@string/cena"
        android:inputType="numberSigned"
        android:enabled="false"
        />

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/btnCancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btnOk"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />

    </LinearLayout>

</LinearLayout>
